--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	  
 	 
 
-	<p class="portrait"> <img src="moi.jpg" alt="Yosemite"/></p>
+	<p class="portrait"> <img src="marrine.jpg" alt=""/></p>
 
 	  
 	  <h2>Research interests 
@@ -65,11 +65,11 @@ Research papers
 	  <h3>2015 </h3>
 <p>Building a regime diagram for the Earth's inner core,
 <strong>M Lasbleis</strong>, R Deguen,
-Physics of the Earth and Planetary Interiors.
+Physics of the Earth and Planetary Interiors,  247, 80-93.
 	  </p>
 	  <p>Earth's inner core dynamics induced by the Lorentz force,
 <strong>M Lasbleis</strong>, R Deguen, P Cardin, S Labrosse,
-Geophysical Journal International 202 (1), 548-563.  <a href="http://gji.oxfordjournals.org/cgi/reprint/ggv155?
+Geophysical Journal International,  202 (1), 548-563.  <a href="http://gji.oxfordjournals.org/cgi/reprint/ggv155?
 ijkey=BcqnuqT5PNszc9r&keytype=ref ">Paper</a>
 	  </p>
 <h3>2013 </h3>
@@ -109,7 +109,8 @@ src="FdS2.jpg" alt="Fete de la Science"  height=200><img src="FdS3.jpg" alt="Fet
 	  152-8550, JAPAN
 	  Tokyo Institute of Technology
 	  </p>
-
+	<p>Github account: MarineLasbleis
+	</p>
 
 
 	</div>
