--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 	  dynamics. 
 </p>
 
+<p>
+In my current post doc, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. 
+</p>
+
+<p>
+I have ongoing collaborations with: John Hernlund (Tokyo), Kei Hirose (Tokyo), Matthieu Laneuville (Tokyo), George Helffrich (Tokyo), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Maryland), Elizabeth Day (London).
+</p>
+
+
 
  <h2>
 	  Work
