update website. content added + CV

--- a/index.html
+++ b/index.html
@@ -28,26 +28,32 @@
 	  
 	  <!-- corps principal --> 
 	  
-	 
-
+	
+	  <p> <center> <img src="meeting.jpg" alt="Meeting on atmosphere evolution" height=200>  <img
+				       src="marine.jpg"  height=200>  <img src="youchien.jpg" alt="ELSI Youchien: hands-on XP on fluid dynamics"  height=200></center></p>
+ 
+<!--
 	<p class="portrait"> <img src="marrine.jpg" alt=""/></p>
-
+	-->
 	  
 	  <h2>Research interests 
 	  </h2>
 	  
 
-<p>I'm interested in the dynamics of deep Earth and early Earth,
-	  especially inner core dynamics and deep mantle early
-	  dynamics. 
+<p>I'm interested in the dynamics of the interior of planets, and its evolution since the planetary formation. During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history.
 </p>
+
+
 
 <p>
 In my current post doc, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. 
 </p>
 
+<p>I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets. 
+</p>
+
 <p>
-I have ongoing collaborations with: John Hernlund (Tokyo), Kei Hirose (Tokyo), Matthieu Laneuville (Tokyo), George Helffrich (Tokyo), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Maryland), Elizabeth Day (London).
+I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Tokyo Tech), Matthieu Laneuville (Tokyo Tech), George Helffrich (Tokyo Tech), Ramon Brasser (Tokyo Tech), Elizabeth Tasker (JAXA), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Univ. New Mexico / ANU), Elizabeth Day (Imperial College London).
 </p>
 
 
@@ -55,6 +61,9 @@ I have ongoing collaborations with: John Hernlund (Tokyo), Kei Hirose (Tokyo), M
  <h2>
 	  Work
 	  </h2>
+	  <p>
+	  <strong> ELSI Research Scientist </strong> at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)
+	  </p>
 <p> <strong>JSPS Fellowship FY2015 </strong> at Earth-Life Science Institute (Tokyo
 	  Institute of Technology, Tokyo, Japan)
 	  </p>
@@ -71,6 +80,21 @@ I have ongoing collaborations with: John Hernlund (Tokyo), Kei Hirose (Tokyo), M
 <h2>
 Research papers
 	  </h2>
+	  <h3> Ongoing projects </h3>
+	  <p>GrowYourIC: a step towards a coherent model of seismic structure,
+	  <strong>M. Lasbleis</strong>, L. Waszek, E. Day. 
+	  Under review. <a href="https://github.com/MarineLasbleis/GrowYourIC">Associated Python toolbox on Github</a> 
+	  </p>
+
+
+ <h3>2017 </h3>
+<p>Building a regime diagram for the Earth's inner core,
+E. Tasker, J. Tan, K. Heng, S. Kane, D. Spiegel, R. Brasser, A. Casey, S. Desch, C. Dorn, J. Hernlund,
+C. Houser, M. Laneuville, <strong> M. Lasbleis</strong>, A.-S. Libert, L. Noack, C. Unterborn & J. Wicks.
+Nature Astronomy, 1 (2), 0042.  <a href="https://arxiv.org/abs/1708.01363">Arxiv link</a>
+	  </p>
+
+
 	  <h3>2015 </h3>
 <p>Building a regime diagram for the Earth's inner core,
 <strong>M Lasbleis</strong>, R Deguen,
@@ -92,6 +116,12 @@ J Noir, MA Calkins, <strong>M Lasbleis</strong>, J Cantwell, JM Aurnou,
 Physics of the Earth and Planetary Interiors 182 (1), 98-106.
 	  </p>
 
+	  <h2>ELSI activities</h2>
+
+	  <p>If you don't know ELSI yet, have a look <a href="http://elsi.jp/en/">here</a>. ELSI is the Earth-Life Science Institute, a WPI Institute in Japan dedicated to understand how the Earth and Life evolved. We are looking at the early times of Earth, its formation and early evolution, and the early days of life on Earth, and how everything is coupled. Since life is one of the many things that make the Earth unique, we are also interested in comparisons with other planets! ELSI is hosting and organizing symposium, workshops and other activities.<p> 
+	  <p> I was involved in the organization of the 5th ELSI Symposium, and I organized a full day event for young researchers, the Young Researchers Day. I am now in the organization team of the first <a href="https://elsischool.com/">ELSI/EON Winter School</a>. </p>
+
+	  <p><center> <img src="YRD.jpg" alt="Young Researchers Day" height=200>  <img src="YRD_group.jpg" alt="Young Researchers Day" height=200></center></p>
 
 	  <h2>Scientific communication (mediation scientifique)</h2>
 
@@ -104,8 +134,8 @@ Physics of the Earth and Planetary Interiors 182 (1), 98-106.
 	  2013) and had a
 	  lot of fun playing with water and science!</p>
 
-<p> <img src="FdS1.jpg" alt="Fete de la Science" height=200><img
-src="FdS2.jpg" alt="Fete de la Science"  height=200><img src="FdS3.jpg" alt="Fete de la Science"  height=200></p>
+	<p> <center><img src="FdS1.jpg" alt="Fete de la Science" height=200><img
+				 src="FdS2.jpg" alt="Fete de la Science"  height=200><img src="FdS3.jpg" alt="Fete de la Science"  height=200></center></p>
 
 	  <h2> Contact
 	  </h2>
@@ -120,6 +150,8 @@ src="FdS2.jpg" alt="Fete de la Science"  height=200><img src="FdS3.jpg" alt="Fet
 	  </p>
 	<p>Github account: MarineLasbleis
 	</p>
+
+	<p> <strong>Up-to-date CV</strong> (uploaded August 15 2017) <a href="CV.pdf">CV</a></p>
 
 
 	</div>
