--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Research papers
 
 
  <h3>2017 </h3>
-<p>Building a regime diagram for the Earth's inner core,
+<p>The language of exoplanet ranking metrics needs to change,
 E. Tasker, J. Tan, K. Heng, S. Kane, D. Spiegel, R. Brasser, A. Casey, S. Desch, C. Dorn, J. Hernlund,
 C. Houser, M. Laneuville, <strong> M. Lasbleis</strong>, A.-S. Libert, L. Noack, C. Unterborn & J. Wicks.
 Nature Astronomy, 1 (2), 0042.  <a href="https://arxiv.org/abs/1708.01363">Arxiv link</a>
