update with paper accepted

--- a/index.html
+++ b/index.html
@@ -80,18 +80,14 @@ I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Toky
 <h2>
 Research papers
 	  </h2>
-	  <h3> Ongoing projects </h3>
-	  <p>GrowYourIC: a step towards a coherent model of seismic structure,
-	  <strong>M. Lasbleis</strong>, L. Waszek, E. Day. 
-	  Under review. <a href="https://github.com/MarineLasbleis/GrowYourIC">Associated Python toolbox on Github</a> 
-	  </p>
-
 
  <h3>2017 </h3>
+ <p> GrowYourIC: a step towards a coherent model of seismic structure, <strong>M. Lasbleis</strong>, L. Waszek, E. Day. in press
+	  at Geochemistry, Geophysics, Geosystems <a href="http://onlinelibrary.wiley.com/doi/10.1002/2017GC007149/full/">LINK</a> <a href="https://github.com/MarineLasbleis/GrowYourIC">Associated Python toolbox on Github</a>  </p>
 <p>The language of exoplanet ranking metrics needs to change,
 E. Tasker, J. Tan, K. Heng, S. Kane, D. Spiegel, R. Brasser, A. Casey, S. Desch, C. Dorn, J. Hernlund,
 C. Houser, M. Laneuville, <strong> M. Lasbleis</strong>, A.-S. Libert, L. Noack, C. Unterborn & J. Wicks.
-Nature Astronomy, 1 (2), 0042.  <a href="https://arxiv.org/abs/1708.01363">Arxiv link</a>
+Nature Astronomy, 1 (2), 0042.  <a href="https://arxiv.org/abs/1708.01363">Arxiv link</a> <a href ="https://www.nature.com/articles/s41550-017-0042?WT.feed_name=subjects_astronomy-and-planetary-science">Nature website</a>
 	  </p>
 
 
@@ -124,6 +120,11 @@ Physics of the Earth and Planetary Interiors 182 (1), 98-106.
 	  <p><center> <img src="YRD.jpg" alt="Young Researchers Day" height=200>  <img src="YRD_group.jpg" alt="Young Researchers Day" height=200></center></p>
 
 	  <h2>Scientific communication (mediation scientifique)</h2>
+
+ <p> This year, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and during Nerd Nite Tokyo (<a href="https://www.facebook.com/nerdnitetokyo">Facebook page here</a>)
+	  </p>
+	  <p> <img src="NerdNite.jpg" alt="NerdNite Tokyo _ credits Nerd Nite Tokyo" height=200> <img src="NerdNite2.jpg" alt="NerdNite Tokyo" height=200> </p>
+
 
 	<p>  As a PhD student, I gathered a small team of students
 	  (master and PhD students) to design small experiments for
