--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@ Physics of the Earth and Planetary Interiors 182 (1), 98-106.
 
  <p> This year, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and during Nerd Nite Tokyo (<a href="https://www.facebook.com/nerdnitetokyo">Facebook page here</a>)
 	  </p>
-	  <p> <img src="NerdNite.jpg" alt="NerdNite Tokyo _ credits Nerd Nite Tokyo" height=200> <img src="NerdNite2.jpg" alt="NerdNite Tokyo" height=200> </p>
+	  <p><center> <img src="NerdNite.jpg" alt="NerdNite Tokyo _ credits Nerd Nite Tokyo" height=200> <img src="NerdNite2.jpg" alt="NerdNite Tokyo" height=200></center> </p>
 
+<p>For people that can read French, I am also involved in a new blog on the structure/composition/dynamics of the interior of planets, with a particular focus for the magnetic field. It's called <a href="https://toutlabasendessous.wordpress.com/">"Tout là bas en dessous"</a>. </p>
 
 	<p>  As a PhD student, I gathered a small team of students
 	  (master and PhD students) to design small experiments for
