--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 	  </h2>
 	  
 
-<p>I'm interested in the dynamics of the interior of planets, and its evolution since the planetary formation. During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history.
+<p>I'm interested in the dynamics of the interior of planets, and its evolution since the planetary formation, with a particular interest to the planetary cores and the evolution of the magnetic field. 
 </p>
-
-
 
 <p>
-In my current post doc, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. 
+During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history.
+In my post docs, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets. 
 </p>
 
-<p>I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets. 
+<p>
+	ELSI, my institute, has funds to invite researchers and students interested in ELSI's topics (Earth's formation, evolution of early Earth and early life) to collaborate with ELSI researchers. Contact me if you are interested. 
 </p>
 
 <p>
@@ -153,7 +153,7 @@ Physics of the Earth and Planetary Interiors 182 (1), 98-106.
 	<p>Github account: MarineLasbleis
 	</p>
 
-	<p> <strong>Up-to-date CV</strong> (uploaded August 15 2017) <a href="CV.pdf">CV</a></p>
+	<p> <strong>Up-to-date CV</strong> (uploaded April 2018) <a href="CV.pdf">CV</a></p>
 
 
 	</div>
