link to github account

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Physics of the Earth and Planetary Interiors 182 (1), 98-106.
 	  152-8550, JAPAN
 	  Tokyo Institute of Technology
 	  </p>
-	<p>Github account: MarineLasbleis
+	<p>Github account: <a href="https://github.com/MarineLasbleis/">MarineLasbleis</a> 
 	</p>
 
 	<p> <strong>Up-to-date CV</strong> (uploaded April 2018) <a href="CV.pdf">CV</a></p>
