links to be open in new page

--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@ Physics of the Earth and Planetary Interiors 182 (1), 98-106.
 
 	  <h2>ELSI activities</h2>
 
-	  <p>If you don't know ELSI yet, have a look <a href="http://elsi.jp/en/">here</a>. ELSI is the Earth-Life Science Institute, a WPI Institute in Japan dedicated to understand how the Earth and Life evolved. We are looking at the early times of Earth, its formation and early evolution, and the early days of life on Earth, and how everything is coupled. Since life is one of the many things that make the Earth unique, we are also interested in comparisons with other planets! ELSI is hosting and organizing symposium, workshops and other activities.<p> 
-	  <p> I was involved in the organization of the 5th ELSI Symposium, and I organized a full day event for young researchers, the Young Researchers Day. I am now in the organization team of the first <a href="https://elsischool.com/">ELSI/EON Winter School</a>. </p>
+	  <p>If you don't know ELSI yet, have a look <a target="_blank" href="http://elsi.jp/en/">here</a>. ELSI is the Earth-Life Science Institute, a WPI Institute in Japan dedicated to understand how the Earth and Life evolved. We are looking at the early times of Earth, its formation and early evolution, and the early days of life on Earth, and how everything is coupled. Since life is one of the many things that make the Earth unique, we are also interested in comparisons with other planets! ELSI is hosting and organizing symposium, workshops and other activities.<p> 
+	  <p> I was involved in the organization of the 5th ELSI Symposium, and I organized a full day event for young researchers, the Young Researchers Day 2018. I was also involved in the organization team of the first ELSI/EON Winter School in January 2018. 
 
 	  <p><center> <img src="YRD.jpg" alt="Young Researchers Day" height=200>  <img src="YRD_group.jpg" alt="Young Researchers Day" height=200></center></p>
 
 	  <h2>Scientific communication (mediation scientifique)</h2>
 
- <p> This year, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and during Nerd Nite Tokyo (<a href="https://www.facebook.com/nerdnitetokyo">Facebook page here</a>)
+ <p> This year, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and during Nerd Nite Tokyo (<a target="_blank" href="https://www.facebook.com/nerdnitetokyo">Facebook page here</a>)
 	  </p>
 	  <p><center> <img src="NerdNite.jpg" alt="NerdNite Tokyo _ credits Nerd Nite Tokyo" height=200> <img src="NerdNite2.jpg" alt="NerdNite Tokyo" height=200></center> </p>
 
-<p>For people that can read French, I am also involved in a new blog on the structure/composition/dynamics of the interior of planets, with a particular focus for the magnetic field. It's called <a href="https://toutlabasendessous.wordpress.com/">"Tout là bas en dessous"</a>. </p>
+<p>For people that can read French, I am also involved in a new blog on the structure/composition/dynamics of the interior of planets, with a particular focus for the magnetic field. It's called <a target="_blank" href="https://toutlabasendessous.wordpress.com/">"Tout là bas en dessous"</a>. </p>
 
 	<p>  As a PhD student, I gathered a small team of students
 	  (master and PhD students) to design small experiments for
