--- a/new-website.html
+++ b/new-website.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="This is the first article on my new website! I&#39;ll update this webpage to tell you more about my research interests and my academic news.">
+        <meta name="description" content="This is the first article on my new website! I&#39;ll update this webpage to tell you more about my research interests and my academic news. I have been reading a lot about building static pages. My ...">
         <meta name="keywords" content="new">
         <link rel="icon" href="/favicon.ico">
 
@@ -79,8 +79,10 @@
 
         <!-- Content -->
     <div class="container content">
-        <p>This is the first article on my new website! </p>
-<p>I'll update this webpage to tell you more about my research interests and my academic news. </p>
+        <p>This is the first article on my new website!<br>
+I'll update this webpage to tell you more about my research interests and my academic news. </p>
+<p>I have been reading a lot about building static pages. My old website was a single html page with css that I wrote myself (with things copied from other websites, trying to understand the basics of html). Since I'm using Python almost everyday, I thought that using a python-based thing would make more sense. At first, I followed a couple of tutorials for django, then decided it was too complicated for my need. But I may come back to it if I want to build a dynamical website with some python included... We'll see.<br>
+I've been reading some other blogs, looking online for more info about pelican, such as <a href="https://peterwittek.com/academic-website-with-pelican.html">this one</a> and thinking about what I need and what can wait. Amongst the couple of things the person was interested, there is bibtex... It's good to know that it's possible to use it to build nice bibliographies. However, I may wait until either writing longer blog posts with bibliography, or having more publications to present on my Research page!</p>
 
 
         
