--- a/new-website.html
+++ b/new-website.html
@@ -82,7 +82,65 @@
         <p>This is the first article on my new website!<br>
 I'll update this webpage to tell you more about my research interests and my academic news. </p>
 <p>I have been reading a lot about building static pages. My old website was a single html page with css that I wrote myself (with things copied from other websites, trying to understand the basics of html). Since I'm using Python almost everyday, I thought that using a python-based thing would make more sense. At first, I followed a couple of tutorials for django, then decided it was too complicated for my need. But I may come back to it if I want to build a dynamical website with some python included... We'll see.<br>
-I've been reading some other blogs, looking online for more info about pelican, such as <a href="https://peterwittek.com/academic-website-with-pelican.html">this one</a> and thinking about what I need and what can wait. Amongst the couple of things the person was interested, there is bibtex... It's good to know that it's possible to use it to build nice bibliographies. However, I may wait until either writing longer blog posts with bibliography, or having more publications to present on my Research page!</p>
+I've been reading some other blogs, looking online for more info about pelican, such as <a href="https://peterwittek.com/academic-website-with-pelican.html">this one</a> and <a href="http://szhorvat.net/pelican/a-new-website-with-pelican.html">this other one</a> and thinking about what I need and what can wait. Amongst the couple of things people are interested, there is bibtex... It's good to know that it's possible to use it to build nice bibliographies. However, I may wait until either writing longer blog posts with bibliography, or having more publications to present on my Research page! <br>
+Oh, and with pelican, I can even add maths... 
+</p>
+<div class="math">$$ \int_0^x dx = x $$</div>
+<script type="text/javascript">if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
+    var align = "center",
+        indent = "0em",
+        linebreak = "false";
+
+    if (false) {
+        align = (screen.width < 768) ? "left" : align;
+        indent = (screen.width < 768) ? "0em" : indent;
+        linebreak = (screen.width < 768) ? 'true' : linebreak;
+    }
+
+    var mathjaxscript = document.createElement('script');
+    mathjaxscript.id = 'mathjaxscript_pelican_#%@#$@#';
+    mathjaxscript.type = 'text/javascript';
+    mathjaxscript.src = 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=TeX-AMS-MML_HTMLorMML';
+    mathjaxscript[(window.opera ? "innerHTML" : "text")] =
+        "MathJax.Hub.Config({" +
+        "    config: ['MMLorHTML.js']," +
+        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' } }," +
+        "    jax: ['input/TeX','input/MathML','output/HTML-CSS']," +
+        "    extensions: ['tex2jax.js','mml2jax.js','MathMenu.js','MathZoom.js']," +
+        "    displayAlign: '"+ align +"'," +
+        "    displayIndent: '"+ indent +"'," +
+        "    showMathMenu: true," +
+        "    messageStyle: 'normal'," +
+        "    tex2jax: { " +
+        "        inlineMath: [ ['\\\\(','\\\\)'] ], " +
+        "        displayMath: [ ['$$','$$'] ]," +
+        "        processEscapes: true," +
+        "        preview: 'TeX'," +
+        "    }, " +
+        "    'HTML-CSS': { " +
+        "        styles: { '.MathJax_Display, .MathJax .mo, .MathJax .mi, .MathJax .mn': {color: 'inherit ! important'} }," +
+        "        linebreaks: { automatic: "+ linebreak +", width: '90% container' }," +
+        "    }, " +
+        "}); " +
+        "if ('default' !== 'default') {" +
+            "MathJax.Hub.Register.StartupHook('HTML-CSS Jax Ready',function () {" +
+                "var VARIANT = MathJax.OutputJax['HTML-CSS'].FONTDATA.VARIANT;" +
+                "VARIANT['normal'].fonts.unshift('MathJax_default');" +
+                "VARIANT['bold'].fonts.unshift('MathJax_default-bold');" +
+                "VARIANT['italic'].fonts.unshift('MathJax_default-italic');" +
+                "VARIANT['-tex-mathit'].fonts.unshift('MathJax_default-italic');" +
+            "});" +
+            "MathJax.Hub.Register.StartupHook('SVG Jax Ready',function () {" +
+                "var VARIANT = MathJax.OutputJax.SVG.FONTDATA.VARIANT;" +
+                "VARIANT['normal'].fonts.unshift('MathJax_default');" +
+                "VARIANT['bold'].fonts.unshift('MathJax_default-bold');" +
+                "VARIANT['italic'].fonts.unshift('MathJax_default-italic');" +
+                "VARIANT['-tex-mathit'].fonts.unshift('MathJax_default-italic');" +
+            "});" +
+        "}";
+    (document.body || document.getElementsByTagName('head')[0]).appendChild(mathjaxscript);
+}
+</script>
 
 
         
