Generate Pelican site

--- a/pages/inner-core.html
+++ b/pages/inner-core.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Inner core Proposed internal dynamics Comparing observations and dynamics">
+        <meta name="description" content="[[ This is still under construction! ]] Inner core In the past thirty years, our understanding of the inner core structure has increased with the number of seismic studies. Observations reveal a ...">
         <meta name="keywords" content="">
         <link rel="icon" href="/favicon.ico">
 
@@ -71,7 +71,13 @@
 
         <!-- Content -->
     <div class="container content">
-        <h2>Inner core</h2>
+        <p>[[ This is still under construction! ]]</p>
+<h2>Inner core</h2>
+<p>In the past thirty years, our understanding of the inner core structure has increased with the number of seismic studies. Observations reveal a global anisotropy with a cylindrical symmetry and radial and lateral heterogeneities. 
+During my PhD, I have studied different hypothesis on the dynamics of the inner core to explain these observations. </p>
+<p>Revisiting the dynamics induced by the Lorentz force, we studied the effect of new boundary conditions, the effect of stratification and growth rate. However, the obtained flow is not strong enough to deform the media for viscosities larger than 1012 Pa.s, in the lower bound of the published inner core estimates. </p>
+<p>Deformation mechanisms can be subdivided between natural convection (arising from unstable thermal or compositional gradients) and externally forced flows, like the one induced by the Lorentz force. Recent estimates of the thermal diffusivity of iron at high pressure limit the possibility of thermal convection to an age of the inner core lower than a hundred of millions years. Two key parameters emerge for the inner core dynamics: the sign and strength of the density stratification and the viscosity of the inner core. We construct a regime diagram for the Earth's inner core dynamics that compares the different published models in term of maximum instantaneous deformation rate. This diagram allows us to compare both expected strain rate and deformation geometry with the seismic observations. However, we find that no published model can explain all the seismic observations. The inner core anisotropy and the hemispherical dichotomy are especially difficult to reconcile with these models. </p>
+<p>The F-Layer is a 200km anomalous layer at the bottom of the outer that presents low P-Wave velocities compared to well-Mixed model. It has been interpreted as a layer depleted in light elements, whereas we usually consider that light elements are expelled at the surface of the inner core by freezing of the outer core alloy. We study the hypothesis of freezing in the bulk of the layer, with iron particles growing and settling in an increasingly depleted liquid.</p>
 <h2>Proposed internal dynamics</h2>
 <p><img alt="With Lorentz force" src="/images/Lorentz_series.png"></p>
 <p><img alt="Published dynamics" src="/images/IC_dyn.png"></p>
