--- a/tags.html
+++ b/tags.html
@@ -75,12 +75,16 @@
         <div class="container content archive">
             <h2><a href="/tags.html"></a></h2>
             <dl class="dl-horizontal">
-            	<dt><span class="label label-default">1</span> article </dt>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/2018.html">2018</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/conference.html">conference</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/new.html">new</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/students.html">students</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/summer.html">summer</a></dd>
             </dl>
         </div>
     </div>
