Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -8,7 +8,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Marine Lasbleis <strong>ELSI Research Scientist</strong></a></h1>
+                <h1><a href="/">Marine Lasbleis <strong>Planetary Interior Researcher</strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li><a href="/pages/contact-info.html">Contact information</a></li>
@@ -18,7 +18,7 @@
         </ul></nav><!-- /#menu -->
     <h1>Authors on Marine Lasbleis</h1>
 
-    <ul>        <li><a href="/author/marine-lasbleis.html">Marine Lasbleis</a> (2)</li>
+    <ul>        <li><a href="/author/marine-lasbleis.html">Marine Lasbleis</a> (4)</li>
     </ul>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
