--- a/tags.html
+++ b/tags.html
@@ -8,7 +8,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Marine Lasbleis <strong>ELSI Research Scientist</strong></a></h1>
+                <h1><a href="/">Marine Lasbleis <strong>Planetary Interior Researcher</strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li><a href="/pages/contact-info.html">Contact information</a></li>
@@ -16,9 +16,12 @@
             <li><a href="/pages/research.html">Research interests and projects</a></li>
             <li><a href="/pages/sci-com.html">Scientific Communication</a></li>
         </ul></nav><!-- /#menu -->
-    <h1>Tags for Marine Lasbleis</h1>        <li><a href="/tag/2018.html">2018</a> (1)</li>
+    <h1>Tags for Marine Lasbleis</h1>        <li><a href="/tag/2018.html">2018</a> (3)</li>
         <li><a href="/tag/conference.html">conference</a> (1)</li>
         <li><a href="/tag/new.html">new</a> (1)</li>
+        <li><a href="/tag/students.html">students</a> (1)</li>
+        <li><a href="/tag/summer.html">summer</a> (2)</li>
+        <li><a href="/tag/wpi.html">WPI</a> (1)</li>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
