--- a/archives.html
+++ b/archives.html
@@ -8,7 +8,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Marine Lasbleis <strong>ELSI Research Scientist</strong></a></h1>
+                <h1><a href="/">Marine Lasbleis <strong>Planetary Interior Researcher</strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li><a href="/pages/contact-info.html">Contact information</a></li>
@@ -19,6 +19,10 @@
 <h1>Archives for Marine Lasbleis</h1>
 
 <dl>
+    <dt>日 09 9月 2018</dt>
+    <dd><a href="/WPI-visit-2018.html">WPI Visit 2018</a></dd>
+    <dt>日 09 9月 2018</dt>
+    <dd><a href="/summer-2018.html">Summer 2018 in Tokyo</a></dd>
     <dt>日 09 9月 2018</dt>
     <dd><a href="/sedi-2018-talk.html">Study of the Earth Deep Interior meeting 2018</a></dd>
     <dt>木 14 6月 2018</dt>
