--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -8,7 +8,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Marine Lasbleis <strong>ELSI Research Scientist</strong></a></h1>
+                <h1><a href="/">Marine Lasbleis <strong>Planetary Interior Researcher</strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li class="active"><a href="/pages/contact-info.html">Contact information</a></li>
