--- a/pages/inner-core.html
+++ b/pages/inner-core.html
@@ -1,36 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-        <title>Inner Core dynamics</title>
-        <meta charset="utf-8" />
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Inner core Proposed internal dynamics Comparing observations and dynamics">
+        <meta name="keywords" content="">
+        <link rel="icon" href="/favicon.ico">
+
+        <title>Inner Core dynamics - Marine Lasbleis</title>
+
+        <!-- Stylesheets -->
+        <link href="/theme/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/theme/css/fonts.css" rel="stylesheet">
+        <link href="/theme/css/nest.css" rel="stylesheet">
+        <link href="/theme/css/pygment.css" rel="stylesheet">
+        <!-- /Stylesheets -->
+
+        <!-- RSS Feeds -->
         <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Marine Lasbleis Full Atom Feed" />
-</head>
+        <!-- /RSS Feeds -->
 
-<body id="index" class="home">
-        <header id="banner" class="body">
-                <h1><a href="/">Marine Lasbleis <strong>Planetary Interior Researcher</strong></a></h1>
-        </header><!-- /#banner -->
-        <nav id="menu"><ul>
-            <li><a href="/pages/contact-info.html">Contact information</a></li>
-            <li class="active"><a href="/pages/inner-core.html">Inner Core dynamics</a></li>
-            <li><a href="/pages/research.html">Research interests and projects</a></li>
-            <li><a href="/pages/sci-com.html">Scientific Communication</a></li>
-        </ul></nav><!-- /#menu -->
-    <h1>Inner Core dynamics</h1>
-    
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
-    <h2>Inner core</h2>
+
+
+    </head>
+
+    <body>
+
+        <!-- Header -->
+    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/Earth.png'); background-position: center; background-size: cover; ">
+
+            <!-- Static navbar -->
+            <div class="container">
+                <div class="header-nav">
+                    <div class="header-logo">
+                        <a class="pull-left" href="/"><img class="mr20" src="/images/logo.png" alt="logo">Marine Lasbleis</a>
+                    </div>
+                    <div class="nav pull-right">
+                            <a  href="/pages/research.html">Research</a>
+                            <a  href="/pages/sci-com.html">Science com.</a>
+                            <a  href="/pages/contact-info.html">Contact</a>
+                            <a  class="active" href="/pages/inner-core.html">Inner Core</a>
+                    </div>
+                </div>
+            </div>
+            <!-- /Static navbar -->
+
+            <!-- Header -->
+    <div class="container header-wrapper">
+        <div class="row">
+              <div class="col-lg-12">
+                  <div class="header-content">
+                      <h1 class="header-title text-uppercase">Inner Core dynamics</h1>
+                      <div class="header-underline"></div>
+                  </div>
+              </div>
+        </div>
+    </div>
+            <!-- /Header -->
+
+        </div>
+        <!-- /Header -->
+
+
+        <!-- Content -->
+    <div class="container content">
+        <h2>Inner core</h2>
 <h2>Proposed internal dynamics</h2>
 <p><img alt="With Lorentz force" src="/images/Lorentz_series.png"></p>
 <p><img alt="Published dynamics" src="/images/IC_dyn.png"></p>
 <h2>Comparing observations and dynamics</h2>
 <p><img alt="Package GrowYourIC" src="/images/code_scheme.png"></p>
+    </div>
+        <!-- /Content --> 
 
-        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
-        </footer><!-- /#contentinfo -->
-</body>
+        <!-- Footer -->
+        <div class="footer gradient-2">
+            <div class="container footer-container ">
+                <div class="row">
+                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+                        <div class="footer-title"></div>
+                        <ul class="list-unstyled">
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+                    </div>
+                    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+                    </div> 
+                    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+                        <p class="pull-right text-right">
+                            <small><em>Proudly powered by <a href="http://docs.getpelican.com/" target="_blank">pelican</a></em></small><br/>
+                            <small><em>Theme and code based on <a href="https://github.com/molivier" target="_blank">molivier</a></em></small><br/>
+                            <small>CC Marine Lasbleis</small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Footer -->
+    </body>
 </html>
