Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -75,12 +75,14 @@
         <div class="container content archive">
             <h2><a href="/category/posts.html">Posts</a></h2>
             <dl class="dl-horizontal">
-            	<dt>日 09 9月 2018</dt>
+            	<dt>月 10 9月 2018</dt>
+            	<dd><a href="/new-job.html">Starting a new position</a></dd>
+            	<dt>日 15 7月 2018</dt>
             	<dd><a href="/WPI-visit-2018.html">WPI Visit 2018</a></dd>
-            	<dt>日 09 9月 2018</dt>
-            	<dd><a href="/summer-2018.html">Summer 2018 in Tokyo</a></dd>
-            	<dt>日 09 9月 2018</dt>
+            	<dt>日 01 7月 2018</dt>
             	<dd><a href="/sedi-2018-talk.html">Study of the Earth Deep Interior meeting 2018</a></dd>
+            	<dt>日 01 7月 2018</dt>
+            	<dd><a href="/summer-2018.html">Summer 2018 in Tokyo</a></dd>
             	<dt>木 14 6月 2018</dt>
             	<dd><a href="/new-website.html">New website</a></dd>
             </dl>
