--- a/tags.html
+++ b/tags.html
@@ -80,7 +80,11 @@
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/conference.html">conference</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/job.html">job</a></dd>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/new.html">new</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/position.html">position</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/students.html">students</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
