Generate Pelican site

--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Email marine.lasbleis .at. elsi.jp Mail address Earth-Life Science Institute Tokyo Institute of Technology 2-12-1-I7E-204 Ookayama, Meguro-ku Tokyo 152-8550 Japa">
+        <meta name="description" content="Email marine.lasbleis .at. univ-nantes . fr Mail address Laboratoire de Planétologie et Géodynamique Bât. 4 Faculté des Sciences et Techniques 2 rue de la Houssinière - BP 92208 44322 Nantes Cedex 3 France">
         <meta name="keywords" content="">
         <link rel="icon" href="/favicon.ico">
 
@@ -72,13 +72,14 @@
         <!-- Content -->
     <div class="container content">
         <h2>Email</h2>
-<p>marine.lasbleis .at. elsi.jp</p>
+<p>marine.lasbleis .at. univ-nantes . fr</p>
 <h2>Mail address</h2>
-<p>Earth-Life Science Institute<br>
-Tokyo Institute of Technology<br>
-2-12-1-I7E-204 Ookayama, Meguro-ku<br>
-Tokyo 152-8550<br>
-Japa</p>
+<p>Laboratoire de Planétologie et Géodynamique
+Bât. 4
+Faculté des Sciences et Techniques
+2 rue de la Houssinière - BP 92208
+44322 Nantes Cedex 3
+France</p>
     </div>
         <!-- /Content --> 
 
