Generate Pelican site

--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -80,6 +80,7 @@ Faculté des Sciences et Techniques
 2 rue de la Houssinière - BP 92208
 44322 Nantes Cedex 3
 France</p>
+         Last modification: 月 10 9月 2018
     </div>
         <!-- /Content --> 
 
