--- a/pages/research.html
+++ b/pages/research.html
@@ -76,7 +76,7 @@
 <p>During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history. In my post docs, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets.</p>
 <p>I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Tokyo Tech), Matthieu Laneuville (Tokyo Tech), George Helffrich (Tokyo Tech), Ramon Brasser (Tokyo Tech), Elizabeth Tasker (JAXA), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Univ. New Mexico / ANU), Elizabeth Day (Imperial College London), Lena Noack (Free University, Berlin).</p>
 <h2>Up-to-date CV</h2>
-<p>Updated on #{date} <a href="/files/CV.pdf">CV</a></p>
+<p>September 2018: <a href="/files/CV.pdf">CV</a></p>
 <h2>Research positions</h2>
 <ul>
 <li>
@@ -110,6 +110,7 @@
 <p>2010 - <em>Experimental study of libration-driven zonal flows in a straight cylinder</em>, J Noir, MA Calkins, <strong>M Lasbleis</strong>, J Cantwell, JM Aurnou, Physics of the Earth and Planetary Interiors 182 (1), 98-106. </p>
 </li>
 </ul>
+         Last modification: 火 11 9月 2018
     </div>
         <!-- /Content --> 
 
