--- a/pages/inner-core.html
+++ b/pages/inner-core.html
@@ -77,6 +77,7 @@
 <p><img alt="Published dynamics" src="/images/IC_dyn.png"></p>
 <h2>Comparing observations and dynamics</h2>
 <p><img alt="Package GrowYourIC" src="/images/code_scheme.png"></p>
+         Last modification: 日 09 9月 2018
     </div>
         <!-- /Content --> 
 
