--- a/pages/sci-com.html
+++ b/pages/sci-com.html
@@ -79,6 +79,7 @@
 <p><img alt="Nerd Nite" src="/images/NerdNite.jpg">
 <img alt="Fete de la Science" src="/images/FdS1.jpg">
 <img alt="ELSI Youchien" src="/images/youchien.jpg"></p>
+         Last modification: 木 14 6月 2018
     </div>
         <!-- /Content --> 
 
