Generate Pelican site

--- a/pages/research.html
+++ b/pages/research.html
@@ -111,6 +111,9 @@
 </li>
 </ul>
     </div>
+    <div class="container content">
+        2018-09-11 10:24:00.459850+02:00
+    </div>
         <!-- /Content --> 
 
         <!-- Footer -->
