--- a/pages/sci-com.html
+++ b/pages/sci-com.html
@@ -80,6 +80,9 @@
 <img alt="Fete de la Science" src="/images/FdS1.jpg">
 <img alt="ELSI Youchien" src="/images/youchien.jpg"></p>
     </div>
+    <div class="container content">
+        2018-06-14 00:00:00+02:00
+    </div>
         <!-- /Content --> 
 
         <!-- Footer -->
