--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -81,6 +81,9 @@ Faculté des Sciences et Techniques
 44322 Nantes Cedex 3
 France</p>
     </div>
+    <div class="container content">
+        2018-09-10 08:42:05.987297+02:00
+    </div>
         <!-- /Content --> 
 
         <!-- Footer -->
