--- a/pages/inner-core.html
+++ b/pages/inner-core.html
@@ -78,6 +78,9 @@
 <h2>Comparing observations and dynamics</h2>
 <p><img alt="Package GrowYourIC" src="/images/code_scheme.png"></p>
     </div>
+    <div class="container content">
+        2018-09-09 21:50:28.432913+02:00
+    </div>
         <!-- /Content --> 
 
         <!-- Footer -->
