Generate Pelican site

--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -74,15 +74,15 @@
         <h2>Email</h2>
 <p>marine.lasbleis .at. univ-nantes . fr</p>
 <h2>Mail address</h2>
-<p>Laboratoire de Planétologie et Géodynamique
-Bât. 4
-Faculté des Sciences et Techniques
-2 rue de la Houssinière - BP 92208
-44322 Nantes Cedex 3
-France</p>
+<p>Laboratoire de Planétologie et Géodynamique</p>
+<p>Bât. 4</p>
+<p>Faculté des Sciences et Techniques</p>
+<p>2 rue de la Houssinière - BP 92208</p>
+<p>44322 Nantes Cedex 3</p>
+<p>France</p>
     </div>
     <div class="container content">
-        月 10 9月 2018
+        火 11 9月 2018
     </div>
         <!-- /Content --> 
 
