Generate Pelican site

--- a/new-job.html
+++ b/new-job.html
@@ -60,7 +60,7 @@
               <div class="col-lg-12">
                   <div class="header-content">
                       <h1 class="header-title">Starting a new position</h1>
-                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, 月 10 9月 2018,  <a href="/category/posts.html">Posts</a></p>
+                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, Mon 10 September 2018,  <a href="/category/posts.html">Posts</a></p>
                       <div class="header-underline"></div>
                       <div class="clearfix"></div>
                       <p class="pull-right header-tags">
