--- a/pages/sci-com.html
+++ b/pages/sci-com.html
@@ -81,7 +81,7 @@
 <img alt="ELSI Youchien" src="/images/youchien.jpg"></p>
     </div>
     <div class="container content">
-        木 14 6月 2018
+        Thu 14 June 2018
     </div>
         <!-- /Content --> 
 
