--- a/summer-2018.html
+++ b/summer-2018.html
@@ -60,7 +60,7 @@
               <div class="col-lg-12">
                   <div class="header-content">
                       <h1 class="header-title">Summer 2018 in Tokyo</h1>
-                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, 日 01 7月 2018,  <a href="/category/posts.html">Posts</a></p>
+                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, Sun 01 July 2018,  <a href="/category/posts.html">Posts</a></p>
                       <div class="header-underline"></div>
                       <div class="clearfix"></div>
                       <p class="pull-right header-tags">
