Generate Pelican site

--- a/pages/research.html
+++ b/pages/research.html
@@ -80,7 +80,10 @@
 <h2>Research positions</h2>
 <ul>
 <li>
-<p>2017 - now: ELSI Research Scientist at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
+<p>2018 - now: post doctoral researcher at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
+</li>
+<li>
+<p>2017 - 2018: ELSI Research Scientist at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
 </li>
 <li>
 <p>2015 - 2017: JSPS Fellowship FY2015 at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
