--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="header-nav">
                     <div class="header-logo">
-                        <a class="pull-left" href="/"><img class="mr20" src="/images/logo.png" alt="logo">Marine Lasbleis</a>
+                        <a class="pull-left" href="/"><img class="mr20" src="/images/logo.png" alt="logo" style="margin-top:10px;">Marine Lasbleis</a>
                     </div>
                     <div class="nav pull-right">
                             <a  href="/pages/research.html">Research</a>
