Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -43,6 +43,10 @@
                         <a class="pull-left" href="/"><img class="mr20" src="/images/logo.png" alt="logo">Marine Lasbleis</a>
                     </div>
                     <div class="nav pull-right">
+                            <a  href="/pages/research.html">Research</a>
+                            <a  href="/pages/sci-com.html">Science com.</a>
+                            <a  href="/pages/contact-info.html">Contact</a>
+                            <a  href="/pages/inner-core.html">Inner Core</a>
                     </div>
                 </div>
             </div>
@@ -71,6 +75,26 @@
         <div class="container content archive">
             <h2><a href="/tags.html"></a></h2>
             <dl class="dl-horizontal">
+            	<dt><span class="label label-default">3</span> articles </dt>
+            	<dd><a href="/tag/2018.html">2018</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/agu.html">agu</a></dd>
+            	<dt><span class="label label-default">2</span> articles </dt>
+            	<dd><a href="/tag/conference.html">conference</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/job.html">job</a></dd>
+            	<dt><span class="label label-default">2</span> articles </dt>
+            	<dd><a href="/tag/new.html">new</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/position.html">position</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/poster.html">poster</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/students.html">students</a></dd>
+            	<dt><span class="label label-default">2</span> articles </dt>
+            	<dd><a href="/tag/summer.html">summer</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/wpi.html">WPI</a></dd>
             </dl>
         </div>
     </div>
